# hlox

./: .gitignore  fourmolu.yaml  hie.yaml  hlox.cabal  input.hlx  language.md  package.yaml
app/: Main.hs
example/: func.hlx  input.hlx
src/Language/Hlox/: Annotation.hs  Interpreter.hs  Parser.hs  Syntax.hs  Value.hs
src/Language/Hlox/Runtime/: Env.hs  Error.hs  Expr.hs  Stmt.hs
